# src/main/java/org/openlmis/dispensing/web/PrescriptionController.java
@@ -30,7 +30,6 @@ import org.slf4j.LoggerFactory;
 import org.slf4j.profiler.Profiler;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.format.annotation.DateTimeFormat;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.transaction.annotation.Transactional;
@@ -39,7 +38,6 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
@@ -111,8 +109,9 @@ public class PrescriptionController extends BaseController {
    *
    * @param id prescription id.
    */
-  @RequestMapping(value = "{id}/void", method = RequestMethod.POST)
-  @ResponseStatus(HttpStatus.OK)
+  @Transactional
+  @RequestMapping(value = "/{id}/void", method = POST)
+  @ResponseStatus(OK)
   public void deactivate(@PathVariable UUID id) {
     LOGGER.debug("Try to make prescription with id: {} void", id);
     prescriptionService.setIsVoided(id);
@@ -127,7 +126,7 @@ public class PrescriptionController extends BaseController {
   @GetMapping
   @ResponseStatus
   @ResponseBody
-//  @RequestMapping(value = "/prescriptions", method = RequestMethod.GET)
+  //  @RequestMapping(value = "/prescriptions", method = RequestMethod.GET)
   public ResponseEntity<List<PrescriptionDto>> searchPrescriptions(
       @RequestParam(required = false) String patientNumber,
       @RequestParam(required = false) String firstName,
